--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <center>
 <table>
-    <tr><td><center><img src="images\CartoonImageV2.png" alt="Troy Easterling Profile Picture" height="200" width="200"></center></td></tr>
+    <tr><td><center><img src="CartoonImageV2.png" alt="Troy Easterling Profile Picture" height="200" width="200"></center></td></tr>
     <tr><td><center><h1>Troy Easterling</h1></center></td></tr>
     <tr><td><center><a href="contactInfo.html">Contact Information</a></center></td></tr>
 </table>
