--- a/contactInfo.html
+++ b/contactInfo.html
@@ -4,110 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-
-  <style>
-    form {
-      /* Form outline */
-      width: 400px;
-      padding: 1em;
-      border: 1px solid #CCC;
-      border-radius: 1em;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    form li+li {
-      margin-top: 1em;
-    }
-
-    label {
-      /* Uniform sixe and alignment */
-
-      display: inline-block;
-      width: 90px;
-      text-align: right;
-    }
-
-    input,
-    textarea {
-      /* To make sure that all text fields have the same font settings by default, textareas have a monospace font */
-      font: 1em sans-serif;
-
-      /*Uniform text field borders */
-      width: 300px;
-      box-sizing: border-box;
-
-      /* Match form field borders */
-      border: 1px solid #999;
-    }
-
-    input-focus,
-    textarea-focus {
-      /* additional highlight for focused elements */
-      border-color: #000;
-    }
-
-    textarea {
-      /* Align multiline text fields with their labels */
-      vertical-align: top;
-
-      /*Provide space to type some text */
-      height: 5em;
-    }
-
-    .button {
-      /* Align buttons with the text fields */
-      padding-left: 90px;
-    }
-
-    button {
-      margin-left: 7em;
-    }
-
-/*
-<form action="mailto:troyeasterling@pobox.com" method="post" enctype="text/plain">
-  <ul>
-    <li>
-      <label for="name">Your Name:</label>
-      <input type="text" id="name" name="user_name">
-    </li>
-    <li>
-      <label for="mail">E-Mail:</label>
-      <input type="email" id="mail" name="user_email">
-    </li>
-    <li>
-      <label for="msg">Message:</label>
-      <textarea id="msg" name="user-message">By default this field is fill with this text</textarea>
-    </li>
-    <br>
-  </ul>
-  <button type="submit" name="submit">Send Your Message</button>
-</form>
-*/
-
-/*
-<form action="mailto:troyeasterling@pobox.com" method="post" enctype="text/plain">
-  <label>Your Name:</label>
-  <input type="text" name="yourName" value="">
-<br>
-  <label>E-Mail:</label>
-  <input type="email" name="yourEmail" value="">
-<br>
-  <label>Message:</label>
-  <textarea name="yourMessage" rows="10" cols="30"></textarea>
-<br>
-  <button type="submit">Send your message</button>
-</form>
-*/
-
-
-
-
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -121,7 +18,7 @@
   <h2>Contact Me</h2>
 
   <form action="mailto:troyeasterling@pobox.com" method="post" enctype="text/plain">
-    <ul>
+    <ul class="tableList">
       <li>
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="user_name">
