--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>Troy Easterling's Personal Site</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <center>
 <table>
-    <tr><td><center><img src="CartoonImageV2.png" alt="Troy Easterling Profile Picture" height="200" width="200"></center></td></tr>
+    <tr><td><center><img src="images\CartoonImageV2.png" alt="Troy Easterling Profile Picture"></center></td></tr>
     <tr><td><center><h1>Troy Easterling</h1></center></td></tr>
     <tr><td><center><a href="contactInfo.html">Contact Information</a></center></td></tr>
 </table>
   </center>
-  <hr size="5" color="41719c">
+  <br>
+  <hr>
   <br>
   <center>
-    <h3>INFORMATION TECHNOLOGY MANAGER</h3>
+    <h2>INFORMATION TECHNOLOGY MANAGER</h2>
   </center>
   <p>A Senior IT Management professional known for his ability to implement standards, procedures and processes that optimize business and information technology functions, Mr. Easterling expertly applies capital Value Process methodology to every
     project, seeing each through from conception to conclusion. Adept at directly managing large- and small-scale projects, he is especially skilled in Technology Roadmap development. His keen business sense allows him to create multi-year technology
@@ -27,76 +29,76 @@
   <br>
 
   <center>
-    <h3>HIGHLY SKILLED IN THE FOLLOWING AREAS</h3>
+    <h2>HIGHLY SKILLED IN THE FOLLOWING AREAS</h2>
   </center>
   <center>
     <table cellspacing="5">
       <tr>
         <td>IT Consultation</td>
-        <td>⭐⭐⭐</td>
+        <td><img class="imgStar3" src="images\3star.png"></td>
         <td>IT Service & Solution Delivery</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Project Scoping / Oversight</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Project Management</td>
-        <td>⭐⭐⭐</td>
+        <td><img class="imgStar3" src="images\3star.png"></td>
       </tr>
       <tr>
         <td>Problem Solving</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Strategic Planning & Analysis</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Strategic Leadership</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Capital Value Process</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
       </tr>
       <tr>
         <td>Business Process Analysis</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>IT Systems Analysis</td>
-        <td>⭐⭐⭐</td>
+        <td><img class="imgStar3" src="images\3star.png"></td>
         <td>IT Roadmaps Development</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Workflow Design</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
       </tr>
       <tr>
         <td>IT Asset Management</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Department Management</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Budget Management</td>
-        <td>⭐⭐⭐</td>
+        <td><img class="imgStar3" src="images\3star.png"></td>
         <td>Staff Management</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
       </tr>
       <tr>
         <td>Stakeholder Management</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Vendor Management</td>
-        <td>⭐⭐⭐</td>
+        <td><img class="imgStar3" src="images\3star.png"></td>
         <td>Motivating Diverse Team</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Relationship Building</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
       </tr>
       <tr>
         <td>Communication</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Organization</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Working Autonomously</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
         <td>Interpersonal Skills</td>
-        <td>⭐⭐⭐⭐</td>
+        <td><img class="imgStar4" src="images\4star.png"></td>
       </tr>
     </table>
   </center>
   <br>
 
   <center>
-    <h3>NOTABLE ACCOMPLISHMENTS</h3>
+    <h2>NOTABLE ACCOMPLISHMENTS</h2>
   </center>
   <ul>
     <li> Oversaw major application upgrades including KRONOS Workforce Central v8.0 and OnBase v16, and email migration from Novell Groupwise to MS Outlook 365. (Lucas County Job and Family Services)</li>
@@ -116,10 +118,10 @@
   </ul>
   <br>
   <center>
-    <h3>PROFESSIONAL EXPERIENCE</h3>
+    <h2>PROFESSIONAL EXPERIENCE</h2>
   </center>
 
-  <h4><strong>Acting Deputy Director – Finance & Operations,</strong> &nbsp; &nbsp; <em>Lucas County Job and Family Services, Toledo, OH</em> &nbsp; &nbsp; &nbsp; &nbsp; 2017 - 2018</h4>
+  <h3><strong>Acting Deputy Director – Finance & Operations,</strong> &nbsp; &nbsp; <em>Lucas County Job and Family Services, Toledo, OH</em> &nbsp; &nbsp; &nbsp; &nbsp; 2017 - 2018</h3>
   <ul>
     <li> Directed the Agency’s financial and operational units including: budgeting, fiscal, payroll, technology, records, and office and facilities management.</li>
     <li> Developed and implemented systems to provide accountability, transparency, quality and accuracy to ensure good stewardship of public resources.</li>
@@ -130,7 +132,7 @@
     <li> Offered oversight in development of budgets totaling nearly $50 million.</li>
   </ul>
 
-  <h4><strong>Information Services Manager,</strong> &nbsp; &nbsp; <em> Lucas County Job and Family Services, Toledo, OH</em> &nbsp; &nbsp; &nbsp; &nbsp; 2015 - 2018</h4>
+  <h3><strong>Information Services Manager,</strong> &nbsp; &nbsp; <em> Lucas County Job and Family Services, Toledo, OH</em> &nbsp; &nbsp; &nbsp; &nbsp; 2015 - 2018</h3>
   <ul>
     <li> Managed staff of ten information systems professionals in support of over 400 Agency users.</li>
     <li> Worked closely with Senior management to identify, recommend, implement and support cost-effective technology solutions.</li>
@@ -140,7 +142,7 @@
     <li> Managed the implementation for Lucas County of a State of Ohio initiative to create an Enterprise Document Management System (EDMS) with a projected savings of $170.000 annually in license maintenance costs.</li>
   </ul>
 
-  <h4><strong>Standard Solutions Manager: Global Project Organization (GPO),</strong> &nbsp; &nbsp; <em>BP Oil Corporation, Houston, TX</em> &nbsp; &nbsp; &nbsp; &nbsp; 2013 - 2014</h4>
+  <h3><strong>Standard Solutions Manager: Global Project Organization (GPO),</strong> &nbsp; &nbsp; <em>BP Oil Corporation, Houston, TX</em> &nbsp; &nbsp; &nbsp; &nbsp; 2013 - 2014</h3>
   <p><em>The Global Project Organization (GPO) deployed major multi-year projects around the world with a value of more than $500 million. Each project deployment was viewed as a functional business and had standard and unique application
       requirements.</em></p>
   <ul>
@@ -152,7 +154,7 @@
     <li> Owned the application supplier relationships with responsibility for defining support requirements, managing support escalations, and developing/reviewing service level agreements (SLAs).</li>
   </ul>
 
-  <h4><strong>Business Information Manager,</strong> &nbsp; &nbsp; <em>BP Husky Refinery, Toledo, OH</em> &nbsp; &nbsp; &nbsp; &nbsp; 2008 - 2013</h4>
+  <h3><strong>Business Information Manager,</strong> &nbsp; &nbsp; <em>BP Husky Refinery, Toledo, OH</em> &nbsp; &nbsp; &nbsp; &nbsp; 2008 - 2013</h3>
   <ul>
     <li> Held responsibility for scoping, initiating and being the single point of accountability for end-to-end delivery and IT budget management of key programs and projects.</li>
     <li> Created strategic IT roadmaps to support mid- and long-term business process and strategic goals.</li>
@@ -160,7 +162,7 @@
     <li> Managed the mix and delivery of desktop, network and telecom service options and high-value projects.</li>
   </ul>
 
-  <h4><strong>North America Sector Relationship Manager,</strong> &nbsp; &nbsp; <em>BP Oil Corporation, Chicago, IL</em> &nbsp; &nbsp; &nbsp; &nbsp; 2005 - 2008</h4>
+  <h3><strong>North America Sector Relationship Manager,</strong> &nbsp; &nbsp; <em>BP Oil Corporation, Chicago, IL</em> &nbsp; &nbsp; &nbsp; &nbsp; 2005 - 2008</h3>
   <ul>
     <li> Established and maintained relationships between the Information Technology (IT) organization and Senior leadership within BP’s Gas, Renewables, and Supply & Trading (GRS&T) businesses in North America; managed the IT communication to North
       America GRS&T businesses.</li>
@@ -169,17 +171,17 @@
     <li> Captured GRS&T service demand requirements and secured Senior sponsorship of service demand plans.</li>
   </ul>
 
-  <h4><strong><em>Additional Experience at BP Oil Corporation: Web Administrator, Procurement (Contract Management), Trainer, Supervisor</em></strong></h4>
+  <h3><strong><em>Additional Experience at BP Oil Corporation: Web Administrator, Procurement (Contract Management), Trainer, Supervisor</em></strong></h3>
 
   <br>
   <center>
-    <h3>EDUCATION/CERTIFICATIONS/RELEVANT SKILLS</h3>
+    <h2>EDUCATION/CERTIFICATIONS/RELEVANT SKILLS</h2>
   </center>
 
-  <h4><strong>Master of Business Administration</strong></h4>
+  <h3><strong>Master of Business Administration</strong></h3>
   <p>Heidelberg University, Tiffin, OH</p>
 
-  <h4><strong>Bachelor of Business Administration: Management Information Systems</strong></h4>
+  <h3><strong>Bachelor of Business Administration: Management Information Systems</strong></h3>
   <p>University of Toledo, Toledo, OH</p>
   <br>
   <center>
