--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Troy Easterling's Personal Site</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <center>
 <table>
-    <tr><td><center><img src="images\CartoonImageV2.png" alt="Troy Easterling Profile Picture"></center></td></tr>
+    <tr><td><center><img src="\images\CartoonImageV2.png" alt="Troy Easterling Profile Picture"></center></td></tr>
     <tr><td><center><h1>Troy Easterling</h1></center></td></tr>
     <tr><td><center><a href="contactInfo.html">Contact Information</a></center></td></tr>
 </table>
