--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <center>
 <table>
-    <tr><td><center><img src="images\CartoonImageV2.png" alt="Troy Easterling Profile Picture"></center></td></tr>
+    <tr><td><center><img src="/Images/CartoonImageV2.png" alt="Troy Easterling Profile Picture"></center></td></tr>
     <tr><td><center><h1>Troy Easterling</h1></center></td></tr>
     <tr><td><center><a href="contactInfo.html">Contact Information</a></center></td></tr>
 </table>
