--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <table cellspacing="5">
       <tr>
         <td>IT Consultation</td>
-        <td><img class="imgStar3" src="images/3star.png"></td>
+        <td><img class="imgStar3" src="Images/3star.png"></td>
         <td>IT Service & Solution Delivery</td>
         <td><img class="imgStar4" src="Images/4star.png"></td>
         <td>Project Scoping / Oversight</td>
